--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1468,7 +1468,8 @@
       "unpin_token": "Unpin %{name}",
       "pin_token": "Pin %{name}",
       "hide_token": "Hide %{name}",
-      "unhide_token": "Unhide %{name}"
+      "unhide_token": "Unhide %{name}",
+      "hide_token_toast": "%{name} hidden"
     },
     "about": {
       "about_token": "About %{name}",
