chore: remove beta from share feedback

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -77,8 +77,8 @@
     "contacts": "Contacts",
     "guides_and_support": "Guides & Support",
     "learn_about_ethereum": "Learn About Ethereum",
-    "follow_us_on_twitter": "Follow Us on Twitter",
-    "share_beta_feedback": "Share Beta Feedback",
+    "follow_us_on_twitter": "Follow us on Twitter",
+    "share_feedback": "Share Feedback",
     "theme": {
       "title": "Theme",
       "system": "System",
