--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -419,6 +419,11 @@
       "pending": "Bidding",
       "confirmed": "Bid",
       "failed": "Bid Failed"
+    },
+    "speed_up": {
+      "pending": "Speeding up",
+      "confirmed": "Sped up",
+      "failed": "Speed up Failed"
     }
   },
   "command_k": {
