--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1472,6 +1472,7 @@
     },
     "toast": {
       "hide_token": "Your %{name} is hidden",
+      "unhide_token": "Your %{name} is unhidden",
       "pin_token": "Your %{name} is pinned",
       "unpin_token": "Your %{name} is unpinned"
     },
